3.5.2/_sources/gallery/axes_grid1/demo_colorbar_with_inset_locator.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/axes_grid1/demo_colorbar_with_inset_locator.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_axes_grid1_demo_colorbar_with_inset_locator.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_axes_grid1_demo_colorbar_with_inset_locator.py:


==============================================================
Controlling the position and size of colorbars with Inset Axes
==============================================================

This example shows how to control the position, height, and width of
colorbars using `~mpl_toolkits.axes_grid1.inset_locator.inset_axes`.

Controlling the placement of the inset axes is done similarly as that of the
legend: either by providing a location option ("upper right", "best", ...), or
by providing a locator with respect to the parent bbox.

.. GENERATED FROM PYTHON SOURCE LINES 14-46



.. image-sg:: /gallery/axes_grid1/images/sphx_glr_demo_colorbar_with_inset_locator_001.png
   :alt: demo colorbar with inset locator
   :srcset: /gallery/axes_grid1/images/sphx_glr_demo_colorbar_with_inset_locator_001.png, /gallery/axes_grid1/images/sphx_glr_demo_colorbar_with_inset_locator_001_2_0x.png 2.0x
   :class: sphx-glr-single-img





.. code-block:: default

    import matplotlib.pyplot as plt

    from mpl_toolkits.axes_grid1.inset_locator import inset_axes

    fig, (ax1, ax2) = plt.subplots(1, 2, figsize=[6, 3])

    axins1 = inset_axes(ax1,
                        width="50%",  # width = 50% of parent_bbox width
                        height="5%",  # height : 5%
                        loc='upper right')

    im1 = ax1.imshow([[1, 2], [2, 3]])
    fig.colorbar(im1, cax=axins1, orientation="horizontal", ticks=[1, 2, 3])
    axins1.xaxis.set_ticks_position("bottom")

    axins = inset_axes(ax2,
                       width="5%",  # width = 5% of parent_bbox width
                       height="50%",  # height : 50%
                       loc='lower left',
                       bbox_to_anchor=(1.05, 0., 1, 1),
                       bbox_transform=ax2.transAxes,
                       borderpad=0,
                       )

    # Controlling the placement of the inset axes is basically same as that
    # of the legend.  you may want to play with the borderpad value and
    # the bbox_to_anchor coordinate.

    im = ax2.imshow([[1, 2], [2, 3]])
    fig.colorbar(im, cax=axins, ticks=[1, 2, 3])

    plt.show()


.. _sphx_glr_download_gallery_axes_grid1_demo_colorbar_with_inset_locator.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: demo_colorbar_with_inset_locator.py <demo_colorbar_with_inset_locator.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: demo_colorbar_with_inset_locator.ipynb <demo_colorbar_with_inset_locator.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    Keywords: matplotlib code example, codex, python plot, pyplot
    `Gallery generated by Sphinx-Gallery
    <https://sphinx-gallery.readthedocs.io>`_
